--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -35,6 +35,14 @@
   background-image: url("../img/logo-htmlacademy.svg");
 }
 
+.copyright__link--htmlacademy:hover::before {
+  background-image: url("../img/logo-htmlacademy-blue.svg");
+}
+
+.copyright__link--htmlacademy:focus::before {
+  background-image: url("../img/logo-htmlacademy-gray.svg");
+}
+
 @media (min-width: @tablet-width) {
   .copyright__text {
     margin-right: 50px;
