--- a/source/less/blocks/button-form.less
+++ b/source/less/blocks/button-form.less
@@ -1,9 +1,11 @@
 .button-form {
   display: block;
-  margin: auto;
   width: 280px;
   height: 58px;
-
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 48px;
+  margin-bottom: 43px;
   font-size: @large-font;
   font-weight: 700;
   line-height: 58px;
