--- a/source/less/blocks/discription.less
+++ b/source/less/blocks/discription.less
@@ -1,4 +1,6 @@
 .discription {
+  margin-top: 5px;
+  font-weight: 700;
   border: none;
 }
 
@@ -12,11 +14,33 @@
 }
 
 .discription__text {
+  width: 250px;
+  padding: 30px 15px 20px 25px;
   font-size: @medium-font;
   font-weight: 700;
-  line-height: 26px;
+  line-height: 35px;
   text-align: left;
 
   text-transform: none;
   color: #000000;
+}
+
+.discription__comment {
+  width: 250px;
+  border: none;
+}
+.dispription__label {
+  position: relative;
+}
+
+.discription--quadrate::before {
+  content: "";
+  position: absolute;
+  top:  -130px;
+  left: -20px;
+  display: block;
+  z-index: 5;
+  width: 279px;
+  height: 160px;
+  background-color: rgba(1, 1, 1, 0.05);
 }
