--- a/source/less/blocks/module2.less
+++ b/source/less/blocks/module2.less
@@ -91,6 +91,7 @@
     margin-left: auto;
     margin-right: auto;
     display: flex;
+    display: none;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
