--- a/source/less/blocks/question-photo.less
+++ b/source/less/blocks/question-photo.less
@@ -7,6 +7,7 @@
   justify-content: start;
   width: 320px;
   margin: 0;
+  margin-bottom: 60px;
   padding: 38px 0.1px 48px;
   text-align: center;
   color: #000000;
