--- a/source/less/blocks/radio.less
+++ b/source/less/blocks/radio.less
@@ -1,39 +1,77 @@
 .radio {
+  position: relative;
+  padding: 38px 25px 1px 97px;
+  font-weight: 700;
   border: none;
 }
 
+.radio--borders::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top:  245px;
+  left: 1px;
+  z-index: 10;
+
+  width: 320px;
+  height: 1px;
+  background-color: rgba(1, 1, 1, 0.1);
+}
+
 .radio__title {
+  width: 236px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 13px;
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
   color: #000000;
 }
 
-.radio__one {
+.radio__label {
+  position: relative;
+  display: block;
+  margin-bottom: 21px;
   font-size: @medium-font;
-  font-weight: 700;
+  font-weight: 700px;
   line-height: 26px;
   text-align: left;
-  text-transform: none;
   color: #000000;
 }
 
-.radio__two {
-  font-size: @medium-font;
-  font-weight: 700;
-  line-height: 26px;
-  text-align: left;
-  text-transform: none;
-  color: #000000;
+.radio--circle::before {
+  content: "";
+  position: absolute;
+  top:  -13px;
+  left: -78px;
+  display: block;
+  z-index: 10;
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  background-color: @gray;
 }
 
-.radio__three {
-  font-size: @medium-font;
-  font-weight: 700;
-  line-height: 26px;
-  text-align: left;
-  text-transform: none;
-  color: #000000;
+/* когда у нашего радио-инпута состояние чект, то есть стоит кружок,
+то у нас должен бы на нём псевдоэлемента афтер*/
+
+.radio__input:checked + .radio--circle::after {
+  content: "";
+  position: relative;
+  top: -24px;
+  left: -63px;
+  display: block;
+  z-index: 10;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 1);
+}
+
+.radio__wrap {
+  display: block;
+  height: 69px;
 }
