--- a/source/less/blocks/form-head.less
+++ b/source/less/blocks/form-head.less
@@ -49,6 +49,7 @@
   .form-head {
     width: 769px;
     min-height: 513px;
+    border: none;
   }
 
   .form-head__picture {
@@ -71,7 +72,7 @@
 
   .form-head__title {
     font-size: 30px;
-    margin: 50px auto;
+    margin: 74px auto 31px;
   }
 
   .form-head__text br {
@@ -79,9 +80,9 @@
   }
 
   .form-head__text {
-    width: 428px;
+    width: 440px;
     margin: 10px auto;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
   }
 }
 
