--- a/source/less/blocks/checkbox.less
+++ b/source/less/blocks/checkbox.less
@@ -1,6 +1,7 @@
 .checkbox {
   position: relative;
-  padding: 32px 25px 1px 97px;
+  margin-top: 17px;
+  padding: 32px 25px 1px;
   font-weight: 700;
   border: none;
 }
@@ -9,7 +10,7 @@
   content: "";
   position: absolute;
   display: block;
-  top: 340px;
+  top: 390px;
   left: 1px;
   z-index: 10;
 
@@ -37,6 +38,7 @@
   position: relative;
   display: block;
   margin-bottom: 21px;
+  padding-left: 73px;
   font-size: @medium-font;
   font-weight: 700px;
   line-height: 26px;
@@ -48,7 +50,7 @@
   content: "";
   position: absolute;
   top: -13px;
-  left: -78px;
+  left: -7px;
   display: block;
   z-index: 10;
   width: 56px;
@@ -64,7 +66,7 @@
   content: "";
   position: absolute;
   top: 6px;
-  left: -61px;
+  left: 8px;
   z-index: 10;
 
   display: block;
@@ -72,4 +74,63 @@
   height: 52px;
   background-repeat: no-repeat;
   background-image: url("../img/icon-tick.svg");
+}
+
+@media (min-width: @tablet-width) {
+  .checkbox__wrap-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 764px;
+    margin-top: 53px;
+    padding: 20px 15px 28px 15px;
+  }
+
+  .checkbox__title {
+    width: 280px;
+    margin: 0;
+    margin-left: 36px;
+    font-size: @large-font;
+    text-align: center;
+  }
+
+  .checkbox--borders::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 26px;
+    left: 60px;
+    width: 125px;
+    height: 1px;
+  }
+
+  .checkbox--borders::after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 26px;
+    left: 581px;
+    width: 125px;
+    height: 1px;
+  }
+
+  .checkbox__wrap {
+    display: inline-block;
+    width: 220px;
+    margin: 0;
+  }
+
+  .checkbox__input {
+    display: block;
+    width: 220px;
+    margin-bottom: 21px;
+    padding-left: 73px;
+  }
+
+  .checkbox__label {
+    position: relative;
+    display: block;
+    width: 220px;
+    margin: 0;
+  }
 }
