--- a/source/less/blocks/form-section.less
+++ b/source/less/blocks/form-section.less
@@ -1,5 +1,6 @@
 .form-section {
   width: 320px;
+  margin: 0;
   padding: 0;
   border-left: 0.3px solid rgba(1, 1, 1, 0.3);
   border-right: 0.3px solid rgba(1, 1, 1, 0.3);
