--- a/source/less/style.less
+++ b/source/less/style.less
@@ -40,3 +40,4 @@
 @import "blocks/module2.less";
 @import "blocks/button-module1.less";
 @import "blocks/button-module2.less";
+@import "blocks/form-content.less";
